--- a/index.html
+++ b/index.html
@@ -578,9 +578,8 @@
     <div class="container header-content">
         <!-- Logo et Titre -->
        <a href="index.html" class="logo">
-    <img src="klz.jpeg" alt="Description du logo (texte alternatif)" />
-</a>
-        
+    <img src="klz.jpeg" />
+</a>  
         <!-- Navigation -->
         <nav role="navigation" aria-label="Menu principal">
             <button class="menu-toggle" aria-controls="main-menu" aria-expanded="false" title="Menu">
