--- a/index.html
+++ b/index.html
@@ -620,9 +620,27 @@
                         <li><a href="paiement.html"><i class="fa-solid fa-credit-card"></i> Paiement en ligne</a></li>
                     </ul>
                 </li>
-                <li><a href="projets.html"><i class="fa-solid fa-chart-line me-2"></i>Projets</a></li>
-                <li><a href="galerie.html"><i class="fa-solid fa-camera me-2"></i>Galerie</a></li>
-                <li><a href="contact.html"><i class="fa-solid fa-headset me-2"></i>Contact / FAQ</a></li>
+                <li class="has-submenu">
+                    <a href="projets.html"><i class="fa-solid fa-chart-line me-2"></i>Projets <i class="fa-solid fa-caret-down"></i></a>
+                    <ul class="submenu">
+                         <li><a href="projet_cours.html"><i class="fa-solid fa-file-lines"></i> Projet en cours</a></li>
+                        <li><a href="projet_futur.html"><i class="fa-solid fa-clock"></i> Projet futur</a></li>
+                        <li><a href="part_coop.html"><i class="fa-solid fa-credit-card"></i>Partenariats et coopération </a></li>
+                </li>
+                <li class="has-submenu">
+                    <a href="galerie.html"><i class="fa-solid fa-camera me-2"></i>Galerie <i class="fa-solid fa-caret-down"></i></a>
+                    <ul class="submenu">
+                         <li><a href="photo.html"><i class="fa-solid fa-file-lines"></i>Photo</a></li>
+                        <li><a href="video.html"><i class="fa-solid fa-clock"></i>Video</a></li>
+                        <li><a href="cerenomie_officielle.html"><i class="fa-solid fa-credit-card"></i> Cerenomie officielle</a></li>
+                </li>
+                <li class="has-submenu">
+                    <a href="contact.html"><i class="fa-solid fa-headset me-2"></i>Contact <i class="fa-solid fa-caret-down"></i></a>
+                    <ul class="submenu">
+                         <li><a href="formulaire_contact.html"><i class="fa-solid fa-file-lines"></i> Formulaire de contact</a></li>
+                        <li><a href="adresse_numero.html"><i class="fa-solid fa-clock"></i> Adresses et numéros utiles.</a></li>
+                        <li><a href="question_freq.html"><i class="fa-solid fa-credit-card"></i>Questions fréquentes sur les démarches et services.</a></li>
+                </li>
             </ul>
         </nav>
     </div>
