--- a/index.html
+++ b/index.html
@@ -575,8 +575,9 @@
 <header>
     <div class="container header-content">
         <a href="index.html" class="logo">
-            <i class="fa-solid fa-gavel"></i> MAIRIE DE KOLWEZI
-        </a>
+    <img src="klz.jpeg" alt="Logo Mairie de Kolwezi" class="logo-img">
+    MAIRIE DE KOLWEZI
+</a>
         
         <nav role="navigation" aria-label="Menu principal">
             <button class="menu-toggle" aria-controls="main-menu" aria-expanded="false" title="Menu">
@@ -635,7 +636,7 @@
                 <li><a href="galerie.html"><i class="fa-solid fa-camera me-2"></i>Galerie</a></li>   
                 
                 <li class="has-submenu">
-                    <a href="contact.html"><i class="fa-solid fa-phone-volume me-2"></i>Contact / FAQ <i class="fa-solid fa-caret-down"></i></a>
+                    <a href="contact.html"><i class="fa-solid fa-phone-volume me-2"></i>Contact <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
                         <li><a href="formulaire_contact.html">Formulaire de contact</a></li>
                         <li><a href="adresses_utiles.html">Adresses & Numéros utiles</a></li>
