--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
 <header>
     <div class="container header-content">
         <a href="index.html" class="logo">
-            <img src="téléchargement.jpeg" alt="Logo Mairie de Kolwezi" class="logo-img">
+            <img src="klz.jpeg" alt="Logo Mairie de Kolwezi" class="logo-img">
             MAIRIE DE KOLWEZI
         </a>
         
