--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <!-- Section 1: Mot du Maire & Carrousel (Disposition Magazine) --><div class="grid lg:grid-cols-3 gap-8 mb-12">
         
         <!-- Colonne 1 (1/3): Mot du Maire (Style Éditorial) --><div class="lg:col-span-1 bg-white rounded-xl shadow-lg overflow-hidden border-t-4 border-yellow-400">
-            <!-- Image du Maire (Placeholder) --><img src="https://placehold.co/400x500/0A3D62/FFFFFF?text=Mot+du+Maire" alt="Photo du Maire de Kolwezi" class="w-full h-auto object-cover">
+            <!-- Image du Maire (Placeholder) --><img src="" alt="Photo du Maire de Kolwezi" class="w-full h-auto object-cover">
             <div class="p-6">
                 <h2 class="text-2xl font-bold text-blue-900 mb-3 flex items-center">
                     <i class="fa-solid fa-pen-nib text-yellow-500 mr-2"></i> Le Mot du Maire
@@ -144,7 +144,7 @@
                 <p class="text-sm text-gray-600 italic border-l-4 border-yellow-400 pl-3">
                     "Chers concitoyens de Kolwezi, notre administration s'engage résolument vers la transparence et le développement. Ensemble, bâtissons la ville de demain, un environnement où il fait bon vivre pour tous. Bienvenue sur notre portail officiel."
                 </p>
-                <p class="mt-4 text-right font-semibold text-blue-700">— L'Autorité Municipale</p>
+                <p class="mt-4 text-right font-semibold text-blue-700">Me Jacques MASENGO KINDELE</p>
             </div>
         </div>
         
