--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <!-- Section 1: Mot du Maire & Carrousel (Disposition Magazine) --><div class="grid lg:grid-cols-3 gap-8 mb-12">
         
         <!-- Colonne 1 (1/3): Mot du Maire (Style Éditorial) --><div class="lg:col-span-1 bg-white rounded-xl shadow-lg overflow-hidden border-t-4 border-yellow-400">
-            <!-- Image du Maire (Placeholder) --><img src="" alt="Photo du Maire de Kolwezi" class="w-full h-auto object-cover">
+            <!-- Image du Maire (Placeholder) --><img src="klz2.jpeg" alt="Photo du Maire de Kolwezi" class="w-full h-auto object-cover">
             <div class="p-6">
                 <h2 class="text-2xl font-bold text-blue-900 mb-3 flex items-center">
                     <i class="fa-solid fa-pen-nib text-yellow-500 mr-2"></i> Le Mot du Maire
@@ -156,13 +156,13 @@
             <!-- Carrousel Flowbite --><div id="default-carousel" class="relative w-full flex-grow" data-carousel="slide">
                 <!-- Carousel wrapper --><div class="relative h-96 overflow-hidden rounded-lg">
                     <!-- Item 1 --><div class="hidden duration-700 ease-in-out" data-carousel-item>
-                        <img src="https://placehold.co/800x400/1E3A8A/FFFFFF?text=Mairie+Vue+Principale" class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="Bâtiment de la Mairie, vue principale">
+                        <img src="https:klz1.jpeg" class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="Bâtiment de la Mairie, vue principale">
                     </div>
                     <!-- Item 2 --><div class="hidden duration-700 ease-in-out" data-carousel-item>
-                        <img src="https://placehold.co/800x400/3B82F6/FFFFFF?text=Projet+Routier+Majeur" class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="Projet de construction de route">
+                        <img src="klz3.jpeg" class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="Projet de construction de route">
                     </div>
                     <!-- Item 3 --><div class="hidden duration-700 ease-in-out" data-carousel-item>
-                        <img src="https://placehold.co/800x400/93C5FD/0A3D62?text=Inauguration+Espace+Vert" class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="Inauguration d'un nouvel espace vert">
+                        <img src="klz1.jpeg" class="absolute block w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="Inauguration d'un nouvel espace vert">
                     </div>
                 </div>
                 <!-- Slider indicators --><div class="absolute z-30 flex -translate-x-1/2 space-x-3 rtl:space-x-reverse bottom-5 left-1/2">
