--- a/index.html
+++ b/index.html
@@ -1,1 +1,323 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ville - Mot du Maire, Galerie & Projets</title>
+    <!-- Chargement de Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Configuration de la police Inter -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f4f7f9;
+        }
+        /* Custom scrollbar for gallery (optional, for aesthetics) */
+        .no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+        .no-scrollbar {
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Firebase Setup (Mandatory for Platform) -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+        import { getAuth, signInAnonymously, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getFirestore } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+
+        // Global variables provided by the Canvas environment
+        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+        const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : null;
+        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+
+        let db, auth;
+
+        if (firebaseConfig) {
+            try {
+                const app = initializeApp(firebaseConfig);
+                db = getFirestore(app);
+                auth = getAuth(app);
+
+                // Authenticate
+                async function authenticate() {
+                    if (initialAuthToken) {
+                        await signInWithCustomToken(auth, initialAuthToken);
+                        console.log("Firebase signed in with custom token.");
+                    } else {
+                        await signInAnonymously(auth);
+                        console.log("Firebase signed in anonymously.");
+                    }
+                }
+                authenticate();
+            } catch (error) {
+                console.error("Firebase initialization failed:", error);
+            }
+        } else {
+            console.warn("Firebase configuration not found. Running in standalone mode.");
+        }
+    </script>
+
+    <!-- Header -->
+    <header class="bg-white shadow-md sticky top-0 z-10">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
+            <h1 class="text-3xl font-extrabold text-blue-800">Mairie de la Ville</h1>
+        </div>
+    </header>
+
+    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 space-y-16">
+
+        <!-- Section Mot du Maire avec Carrousel -->
+        <section id="mot-du-maire" class="bg-white p-6 md:p-10 rounded-xl shadow-2xl">
+            <h2 class="text-4xl font-bold text-center mb-10 text-gray-800 border-b-4 border-blue-500 pb-2">Mot du Maire</h2>
+
+            <div id="carousel-container" class="relative overflow-hidden">
+                <!-- Wrapper du Carrousel (une seule slide visible à la fois) -->
+                <div id="carousel-wrapper" class="flex transition-transform duration-700 ease-in-out">
+                    <!-- Les slides seront générées par JS ici -->
+                </div>
+
+                <!-- Boutons de navigation -->
+                <button onclick="prevSlide()" class="absolute top-1/2 left-0 transform -translate-y-1/2 bg-white/70 hover:bg-white p-3 rounded-full shadow-lg ml-2 transition z-10 focus:outline-none">
+                    <svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
+                </button>
+                <button onclick="nextSlide()" class="absolute top-1/2 right-0 transform -translate-y-1/2 bg-white/70 hover:bg-white p-3 rounded-full shadow-lg mr-2 transition z-10 focus:outline-none">
+                    <svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
+                </button>
+            </div>
+
+            <!-- Indicateurs (Points) -->
+            <div id="carousel-indicators" class="flex justify-center space-x-2 mt-4">
+                <!-- Les indicateurs seront générés par JS ici -->
+            </div>
+        </section>
+
+        <!-- Section Galerie de la Mairie -->
+        <section id="galerie-mairie" class="bg-white p-6 md:p-10 rounded-xl shadow-2xl">
+            <h2 class="text-4xl font-bold text-center mb-8 text-gray-800 border-b-4 border-green-500 pb-2">Galerie de la Mairie</h2>
+            <p class="text-center text-gray-600 mb-6">Quelques clichés des événements marquants et du quotidien de l'administration municipale.</p>
+
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+                <!-- Nous utilisons les images fournies + des placeholders -->
+                <div class="overflow-hidden rounded-lg shadow-md hover:shadow-xl transition duration-300">
+                    <img src="./Capture d'écran 2025-10-26 212719.png" alt="Vue de la Mairie" class="w-full h-48 object-cover transform hover:scale-105 transition duration-500" onerror="this.onerror=null; this.src='https://placehold.co/600x400/38a169/ffffff?text=Image+1'">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md hover:shadow-xl transition duration-300">
+                    <img src="./jcq1.jpeg" alt="Événement communautaire" class="w-full h-48 object-cover transform hover:scale-105 transition duration-500" onerror="this.onerror=null; this.src='https://placehold.co/600x400/4c51bf/ffffff?text=Image+2'">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md hover:shadow-xl transition duration-300">
+                    <img src="./jcq2.jpeg" alt="Inauguration" class="w-full h-48 object-cover transform hover:scale-105 transition duration-500" onerror="this.onerror=null; this.src='https://placehold.co/600x400/9f7aea/ffffff?text=Image+3'">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md hover:shadow-xl transition duration-300">
+                    <img src="./jcq3.jpeg" alt="Travaux de voirie" class="w-full h-48 object-cover transform hover:scale-105 transition duration-500" onerror="this.onerror=null; this.src='https://placehold.co/600x400/f6ad55/ffffff?text=Image+4'">
+                </div>
+                <!-- Ajout de photos génériques pour compléter la galerie -->
+                <div class="overflow-hidden rounded-lg shadow-md hover:shadow-xl transition duration-300">
+                    <img src="https://placehold.co/600x400/ed8936/ffffff?text=Vue+Aérienne" alt="Vue Aérienne de la ville" class="w-full h-48 object-cover transform hover:scale-105 transition duration-500">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md hover:shadow-xl transition duration-300">
+                    <img src="https://placehold.co/600x400/4299e1/ffffff?text=Rénovation" alt="Rénovation d'un bâtiment" class="w-full h-48 object-cover transform hover:scale-105 transition duration-500">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md hover:shadow-xl transition duration-300">
+                    <img src="https://placehold.co/600x400/319795/ffffff?text=Parc+Municipal" alt="Nouveau Parc Municipal" class="w-full h-48 object-cover transform hover:scale-105 transition duration-500">
+                </div>
+                <div class="overflow-hidden rounded-lg shadow-md hover:shadow-xl transition duration-300">
+                    <img src="https://placehold.co/600x400/ecc94b/ffffff?text=Réunion" alt="Réunion du Conseil" class="w-full h-48 object-cover transform hover:scale-105 transition duration-500">
+                </div>
+            </div>
+        </section>
+
+        <!-- Section Projets Phares -->
+        <section id="projets-phares" class="bg-white p-6 md:p-10 rounded-xl shadow-2xl">
+            <h2 class="text-4xl font-bold text-center mb-8 text-gray-800 border-b-4 border-red-500 pb-2">Projets Phares</h2>
+            <p class="text-center text-gray-600 mb-10">Découvrez les initiatives clés qui façonnent l'avenir de notre ville.</p>
+
+            <div class="grid md:grid-cols-3 gap-8">
+
+                <!-- Projet 1: Infrastructures -->
+                <div class="bg-gray-50 p-6 rounded-xl shadow-lg border-t-4 border-red-500 hover:shadow-xl transition duration-300">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-3">Rénovation Urbaine</h3>
+                    <p class="text-gray-600 mb-4">Programme de réhabilitation des axes routiers principaux et de l'éclairage public pour améliorer la qualité de vie et la sécurité.</p>
+                    <a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium transition">
+                        Détails du projet
+                        <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+                    </a>
+                </div>
+
+                <!-- Projet 2: Social & Éducation -->
+                <div class="bg-gray-50 p-6 rounded-xl shadow-lg border-t-4 border-red-500 hover:shadow-xl transition duration-300">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-3">Pôle Jeunesse et Sport</h3>
+                    <p class="text-gray-600 mb-4">Construction d'un centre polyvalent dédié aux activités sportives et culturelles pour les jeunes, avec accès libre et gratuit.</p>
+                    <a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium transition">
+                        Détails du projet
+                        <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+                    </a>
+                </div>
+
+                <!-- Projet 3: Environnement -->
+                <div class="bg-gray-50 p-6 rounded-xl shadow-lg border-t-4 border-red-500 hover:shadow-xl transition duration-300">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-3">Ville Verte 2030</h3>
+                    <p class="text-gray-600 mb-4">Mise en place de 5000 nouveaux arbres et développement des transports en commun électriques pour réduire notre empreinte carbone.</p>
+                    <a href="#" class="inline-flex items-center text-red-600 hover:text-red-800 font-medium transition">
+                        Détails du projet
+                        <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+                    </a>
+                </div>
+
+            </div>
+        </section>
+
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 mt-16">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6 text-center text-gray-300">
+            &copy; 2025 Mairie de la Ville. Tous droits réservés.
+        </div>
+    </footer>
+
+    <!-- Logique JavaScript pour le Carrousel -->
+    <script>
+        // Définition des slides du carrousel (Ordre Décroissant - La 1ère est la plus importante/récente)
+        const slides = [
+            {
+                image: './jcq4.jpeg',
+                title: "Engagement pour une Ville Propre",
+                message: "Notre engagement pour une ville propre et durable se reflète dans nos nouvelles initiatives de recyclage. Ensemble, bâtissons un avenir plus vert. C'est en unissant nos forces que nous ferons de notre ville un modèle de civisme et de responsabilité environnementale. Merci de votre collaboration.",
+                fallback: 'https://placehold.co/600x400/10b981/ffffff?text=Mot+du+Maire+1'
+            },
+            {
+                image: './jcq3.jpeg',
+                title: "Investissement dans l'Éducation",
+                message: "L'éducation est la clé de notre avenir. Nous investissons massivement dans la rénovation de nos écoles pour offrir le meilleur environnement d'apprentissage à nos enfants. Prioriser l'excellence scolaire est notre devoir envers la nouvelle génération.",
+                fallback: 'https://placehold.co/600x400/3b82f6/ffffff?text=Mot+du+Maire+2'
+            },
+            {
+                image: './jcq2.jpeg',
+                title: "Soutien à l'Entrepreneuriat Local",
+                message: "Le développement économique passe par le soutien aux petites entreprises locales. Venez découvrir nos programmes d'aide à l'entrepreneuriat qui stimulent l'emploi et l'innovation dans la région. Une économie forte est une communauté prospère.",
+                fallback: 'https://placehold.co/600x400/f59e0b/ffffff?text=Mot+du+Maire+3'
+            },
+            {
+                image: './jcq1.jpeg',
+                title: "Priorité à la Sécurité Citoyenne",
+                message: "La sécurité de nos citoyens est notre priorité absolue. De nouvelles patrouilles de proximité sont mises en place pour assurer la tranquillité de tous et renforcer le lien de confiance avec nos forces de l'ordre. Soyez vigilants et unis.",
+                fallback: 'https://placehold.co/600x400/ef4444/ffffff?text=Mot+du+Maire+4'
+            },
+            {
+                image: "./Capture d'écran 2025-10-26 212719.png",
+                title: "Bilan Annuel et Participation",
+                message: "Chers concitoyens, je suis fier de vous présenter le bilan de l'année écoulée. Votre participation et votre engagement sont essentiels pour la réussite de nos projets futurs. Continuons à bâtir notre ville ensemble, dans la transparence et le dialogue.",
+                fallback: 'https://placehold.co/600x400/8b5cf6/ffffff?text=Mot+du+Maire+5'
+            }
+        ];
+
+        let currentSlide = 0;
+        const wrapper = document.getElementById('carousel-wrapper');
+        const indicatorsContainer = document.getElementById('carousel-indicators');
+
+        /**
+         * Génère le HTML pour les slides et les indicateurs.
+         */
+        function renderCarousel() {
+            wrapper.innerHTML = '';
+            indicatorsContainer.innerHTML = '';
+
+            slides.forEach((slide, index) => {
+                // Création de la Slide
+                const slideElement = document.createElement('div');
+                slideElement.className = 'w-full flex-shrink-0 p-4'; // Important pour le carrousel
+                slideElement.innerHTML = `
+                    <!-- Contenu de la slide: Photo à gauche, Texte à droite (s'empile sur mobile) -->
+                    <div class="flex flex-col md:flex-row bg-gray-50 rounded-lg overflow-hidden shadow-xl min-h-[400px]">
+                        
+                        <!-- Bloc Image (Gauche) -->
+                        <div class="md:w-1/2 p-2">
+                            <img 
+                                src="${slide.image}" 
+                                alt="${slide.title}" 
+                                class="w-full h-full object-cover rounded-lg shadow-md"
+                                onerror="this.onerror=null; this.src='${slide.fallback}'"
+                            >
+                        </div>
+
+                        <!-- Bloc Texte (Droite) -->
+                        <div class="md:w-1/2 p-6 flex flex-col justify-center">
+                            <h3 class="text-2xl font-bold text-blue-700 mb-3">${slide.title}</h3>
+                            <p class="text-gray-700 leading-relaxed">${slide.message}</p>
+                            <span class="mt-4 text-sm font-semibold text-gray-500">
+                                Le Maire, Jean-Claude Quintus (Slide ${index + 1})
+                            </span>
+                        </div>
+                    </div>
+                `;
+                wrapper.appendChild(slideElement);
+
+                // Création de l'Indicateur
+                const indicator = document.createElement('button');
+                indicator.className = `w-3 h-3 rounded-full transition duration-300 focus:outline-none ${index === currentSlide ? 'bg-blue-600' : 'bg-gray-300 hover:bg-gray-400'}`;
+                indicator.onclick = () => goToSlide(index);
+                indicatorsContainer.appendChild(indicator);
+            });
+            updateCarouselPosition();
+        }
+
+        /**
+         * Met à jour la position du wrapper du carrousel.
+         */
+        function updateCarouselPosition() {
+            const containerWidth = wrapper.parentElement.clientWidth;
+            const offset = -currentSlide * containerWidth;
+            wrapper.style.transform = `translateX(${offset}px)`;
+
+            // Mise à jour des indicateurs
+            const indicators = indicatorsContainer.children;
+            Array.from(indicators).forEach((indicator, index) => {
+                indicator.classList.remove('bg-blue-600');
+                indicator.classList.add('bg-gray-300', 'hover:bg-gray-400');
+                if (index === currentSlide) {
+                    indicator.classList.add('bg-blue-600');
+                    indicator.classList.remove('bg-gray-300', 'hover:bg-gray-400');
+                }
+            });
+        }
+
+        /**
+         * Va à la slide précédente.
+         */
+        window.prevSlide = function() {
+            currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+            updateCarouselPosition();
+        };
+
+        /**
+         * Va à la slide suivante.
+         */
+        window.nextSlide = function() {
+            currentSlide = (currentSlide + 1) % slides.length;
+            updateCarouselPosition();
+        };
+
+        /**
+         * Va à une slide spécifique.
+         */
+        window.goToSlide = function(index) {
+            currentSlide = index;
+            updateCarouselPosition();
+        };
+
+        // Redimensionnement et Initialisation
+        window.addEventListener('load', renderCarousel);
+        window.addEventListener('resize', updateCarouselPosition);
+
+        // Optionnel : Défilement automatique toutes les 6 secondes
+        setInterval(window.nextSlide, 6000);
+    </script>
+</body>
+</html>
 
