--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     
                     <div class="text-carousel-item active p-4">
                         <p class="text-lg text-gray-700 mb-3 leading-relaxed font-medium">
-                            Chers concitoyens de Kolwezi, c'est avec une grande fierté que je vous accueille sur notre nouveau portail numérique. Cet outil est le reflet de notre engagement pour une transparence totale et une administration de proximité**.
+                            Chers concitoyens de Kolwezi, c'est avec une grande fierté que je vous accueille sur notre nouveau portail numérique. Cet outil est le reflet de notre engagement pour une **transparence** totale et une **administration de proximité**.
                         </p>
                         <p class="text-gray-600 leading-relaxed italic">
                             Nous œuvrons chaque jour pour améliorer nos infrastructures et stimuler notre économie locale. Votre participation et vos suggestions sont essentielles pour bâtir la Kolwezi moderne que nous méritons tous.
@@ -114,7 +114,7 @@
 
                     <div class="text-carousel-item p-4">
                         <p class="text-lg text-gray-700 mb-3 leading-relaxed font-medium">
-                            La bonne gouvernance et l'inclusion sont au cœur de ma vision. Chaque décision prise vise à garantir un environnement sain et sécurisé, où les opportunités sont équitablement réparties pour nos jeunes.
+                            La **bonne gouvernance** et l'**inclusion** sont au cœur de ma vision. Chaque décision prise vise à garantir un environnement sain et sécurisé, où les opportunités sont équitablement réparties pour nos jeunes.
                         </p>
                         <p class="text-gray-600 leading-relaxed italic">
                             Je vous invite à consulter régulièrement les sections Projets et Actualités pour suivre l'avancement des chantiers qui transforment notre ville. Ensemble, relevons les défis et célébrons nos succès.
@@ -160,16 +160,19 @@
                 <div id="carousel-ville-images" class="relative w-full" data-carousel="slide" data-carousel-sync="#carousel-ville-text" data-carousel-interval="7000">
                     <div class="relative h-96 overflow-hidden rounded-lg shadow-lg">
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                            <img src="https://placehold.co/800x600/1E3A8A/FFFFFF?text=Ville+Kolwezi+1" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Vue panoramique de Kolwezi">
+                            <img src="" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Vue panoramique de Kolwezi, avec des immeubles modernes et des espaces verts luxuriants, sous un ciel bleu dégagé.">
                         </div>
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                            <img src="https://placehold.co/800x600/38a169/ffffff?text=Centre+Ville+Actif" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Animation du centre-ville">
+                            <img src="" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Une rue commerçante animée de Kolwezi, avec des boutiques colorées, des passants et des véhicules, reflétant l'activité économique.">
                         </div>
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                            <img src="https://placehold.co/800x600/4c51bf/ffffff?text=Marché+Local+Vibrant" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Marché local de Kolwezi">
+                            <img src="" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Un marché en plein air à Kolwezi, avec des étals remplis de produits frais locaux et des commerçants interagissant avec les clients.">
                         </div>
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                            <img src="https://placehold.co/800x600/ed8936/ffffff?text=Infrastructure+Moderne" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Nouvelle infrastructure urbaine">
+                            <img src="" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Une nouvelle infrastructure moderne à Kolwezi, comme un pont ou un bâtiment public, symbolisant le développement et la croissance.">
+                        </div>
+                        <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                            <img src="" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Un quartier résidentiel paisible à Kolwezi, avec des maisons bien entretenues et des jardins, illustrant la qualité de vie.">
                         </div>
                     </div>
                     <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
@@ -183,6 +186,7 @@
                         <button type="button" class="w-3 h-3 rounded-full bg-white ring-2 ring-blue-500" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
                         <button type="button" class="w-3 h-3 rounded-full bg-white ring-2 ring-blue-500" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
                         <button type="button" class="w-3 h-3 rounded-full bg-white ring-2 ring-blue-500" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
+                        <button type="button" class="w-3 h-3 rounded-full bg-white ring-2 ring-blue-500" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4"></button>
                     </div>
                 </div>
             </div>
@@ -230,6 +234,15 @@
                         </p>
                         <p class="text-gray-600 italic text-sm">
                             Chaque projet est un pas de plus vers une meilleure qualité de vie pour tous les Kolweziens.
+                        </p>
+                    </div>
+                    <div class="text-carousel-item p-4">
+                        <h3 class="text-2xl font-bold text-gray-900 mb-3">Vie de Quartier Sereine</h3>
+                        <p class="text-lg text-gray-700 leading-relaxed mb-2">
+                            Découvrez la tranquillité de nos quartiers résidentiels, où la communauté et le bien-être sont au premier plan.
+                        </p>
+                        <p class="text-gray-600 italic text-sm">
+                            La Mairie s'investit pour garantir un environnement agréable et sûr pour toutes les familles.
                         </p>
                     </div>
                 </div>
