--- a/index.html
+++ b/index.html
@@ -176,19 +176,19 @@
                 <div id="carousel-ville-images" class="relative w-full" data-carousel="slide" data-carousel-sync="#carousel-ville-text" data-carousel-interval="7000">
                     <div class="relative h-96 overflow-hidden rounded-lg shadow-lg">
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                            <img src="https://via.placeholder.com/600x400?text=Kolwezi+Vue+Panoramique+1" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Vue panoramique de Kolwezi, avec des immeubles modernes et des espaces verts luxuriants, sous un ciel bleu dégagé.">
+                            <img src="kzi1.jpeg" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Vue panoramique de Kolwezi, avec des immeubles modernes et des espaces verts luxuriants, sous un ciel bleu dégagé.">
                         </div>
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                            <img src="https://via.placeholder.com/600x400?text=Kolwezi+Rue+Commerçante+2" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Une rue commerçante animée de Kolwezi, avec des boutiques colorées, des passants et des véhicules, reflétant l'activité économique.">
+                            <img src="kzi2.jpeg" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Une rue commerçante animée de Kolwezi, avec des boutiques colorées, des passants et des véhicules, reflétant l'activité économique.">
                         </div>
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                            <img src="https://via.placeholder.com/600x400?text=Kolwezi+Marché+3" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Un marché en plein air à Kolwezi, avec des étals remplis de produits frais locaux et des commerçants interagissant avec les clients.">
+                            <img src="kzi3.jpeg" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Un marché en plein air à Kolwezi, avec des étals remplis de produits frais locaux et des commerçants interagissant avec les clients.">
                         </div>
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                            <img src="https://via.placeholder.com/600x400?text=Kolwezi+Infrastructure+4" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Une nouvelle infrastructure moderne à Kolwezi, comme un pont ou un bâtiment public, symbolisant le développement et la croissance.">
+                            <img src="kzi4.jpeg" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Une nouvelle infrastructure moderne à Kolwezi, comme un pont ou un bâtiment public, symbolisant le développement et la croissance.">
                         </div>
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                            <img src="https://via.placeholder.com/600x400?text=Kolwezi+Quartier+Résidentiel+5" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Un quartier résidentiel paisible à Kolwezi, avec des maisons bien entretenues et des jardins, illustrant la qualité de vie.">
+                            <img src="kzi1.jpeg" class="absolute block w-full h-full object-cover top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2" alt="Un quartier résidentiel paisible à Kolwezi, avec des maisons bien entretenues et des jardins, illustrant la qualité de vie.">
                         </div>
                     </div>
                     <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
