--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                             Nous œuvrons chaque jour pour améliorer nos infrastructures et stimuler notre économie locale. Votre participation et vos suggestions sont essentielles pour bâtir la Kolwezi moderne que nous méritons tous.
                         </p>
                         <p class="text-right mt-2">
-                         <span class="block text-lg font-semibold text-gray-800">Jacques Masengo</span>
-                         <span class="block text-sm text-gray-600">Maire de Kolwezi</span>
+                         <span class="block text-lg font-semibold text-gray-800">Me Jacques MASENGO KINDELE</span>
+                         <span class="block text-sm text-gray-800">Maire de Kolwezi</span>
                         </p>
 
                     </div>
@@ -128,8 +128,8 @@
                             Je vous invite à consulter régulièrement les sections Projets et Actualités pour suivre l'avancement des chantiers qui transforment notre ville. Ensemble, relevons les défis et célébrons nos succès.
                         </p>
                         <p class="text-right mt-2">
-                          <span class="block text-lg font-semibold text-gray-800">Jacques Masengo</span>
-                          <span class="block text-sm text-gray-600">Maire de Kolwezi</span>
+                          <span class="block text-lg font-semibold text-gray-800">Me Jacques MASENGO KINDELE</span>
+                          <span class="block text-sm text-gray-800">Maire de Kolwezi</span>
                         </p>
                     </div>
 
@@ -141,8 +141,8 @@
                             Votre bien-être est notre priorité absolue. Nous mettons tout en œuvre pour renforcer la santé publique et garantir une éducation de qualité dans toute l'étendue de la commune.
                         </p>
                         <p class="text-right mt-2">
-                          <span class="block text-lg font-semibold text-gray-800">Jacques Masengo</span>
-                          <span class="block text-sm text-gray-600">Maire de Kolwezi</span>
+                          <span class="block text-lg font-semibold text-gray-800">Me Jacques MASENGO KINDELE</span>
+                          <span class="block text-sm text-gray-800">Maire de Kolwezi</span>
                         </p>
 
                     </div>
@@ -155,8 +155,8 @@
                             Que ce site devienne votre plateforme de référence pour tout savoir sur la vie municipale. Au plaisir de vous rencontrer et d'échanger pour le progrès de Kolwezi.
                         </p>
                         <p class="text-right mt-2">
-                          <span class="block text-lg font-semibold text-gray-800">Jacques Masengo</span>
-                          <span class="block text-sm text-gray-600">Maire de Kolwezi</span>
+                          <span class="block text-lg font-semibold text-gray-800">Me Jacques MASENGO KINDELE</span>
+                          <span class="block text-sm text-gray-800">Maire de Kolwezi</span>
                         </p>
 
                     </div>
